--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
     <p class="footer-role">Web Developer & UI/UX Designer</p>
     <div class="footer-socials">
         <a href="#">🌐</a>
-        <a href="#">🐙</a>
+        <a href="${project.github}" target="_blank" class="btn github">
+        <img src="assets/images/2026-02-06 (1).png" class="icon" alt="GitHub">
+        </a>
         <a href="#">🎨</a>
     </div>
     <p class="copyright">© 2026 All rights reserved.</p>
