--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="footer-socials">
         <a href="#">🌐</a>
         <a href="${project.github}" target="_blank" class="btn github">
-        <img src="assets/images/2026-02-06 (1).png" class="icon" alt="GitHub">
+        <img src="assets/images/gitnhub.png" class="icon" alt="GitHub">
         </a>
         <a href="#">🎨</a>
     </div>
