--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
         <a href="${project.github}" target="_blank" class="btn github">
         <img src="assets/images/gitnhub.png" class="icon" alt="GitHub">
         </a>
-        <a href="#">🎨</a>
+        <a href="https://www.behance.net/AvishekBista5632" target="_blank" class="btn behance">
+        <img src="assets/images/behance.png" class="icon" alt="Behance">
+        </a>
     </div>
     <p class="copyright">© 2026 All rights reserved.</p>
 </footer>
