--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <p class="footer-role">Web Developer & UI/UX Designer</p>
     <div class="footer-socials">
         <a href="#">🌐</a>
-        <a href="${project.github}" target="_blank" class="btn github">
+        <a href="https://github.com/avishekbista5632-coder" target="_blank" class="btn github">
         <img src="assets/images/gitnhub.png" class="icon" alt="GitHub">
         </a>
         <a href="https://www.behance.net/AvishekBista5632" target="_blank" class="btn behance">
