--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 
     <!-- LINKEDIN -->
-    <a href="https://linkedin.com/in/YOUR_PROFILE"
+    <a href="https://www.linkedin.com/in/avishek-bista-84b959376/"
        target="_blank"
        class="contact-btn linkedin">
        💼 Connect via LinkedIn
