--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
     <p class="footer-name">Avishek Bista</p>
     <p class="footer-role">Web Developer & UI/UX Designer</p>
     <div class="footer-socials">
-        <a href="#">🌐</a>
+        <a href="https://www.linkedin.com/in/avishek-bista-84b959376/" target="_blank" class="btn linkedin">
+        <img src="assets/images/linkedin.png" class="icon" alt="Linkedin">
+        </a>
         <a href="https://github.com/avishekbista5632-coder" target="_blank" class="btn github">
         <img src="assets/images/gitnhub.png" class="icon" alt="GitHub">
         </a>
