--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
     </a>
 
     <!-- CV -->
-    <a href="https://doc-04-5g-apps-viewer.googleusercontent.com/viewer/secure/pdf/hf1jrpa5nv1jr99m0iqvlu8o02s1rrr4/1qiq4i1h4hv920gvll2jm067drcnhudf/1769855100000/gmail/15755259008404119808/ACFrOgCj38Xx_JT7nMe15FAd8eqLCYk4nTbXHLd20drpxGhysvVBiLYKiHLrzdBkQf6oobYdHHNb12Q8ryE-CRlhWrSlNMd35ZYv6cLydgRyblyDb7BtewIfnOKP8tSefWADsf41dq17iM4HevbtwWIY8HqPixG2Z27qUN0omQ==?print=true"
+    <a href="assets/cv/Avishek_Bista_CV.pdf"
        target="_blank"
-       class="contact-btn cv">
+       class="contact-btn cv"
+       download>
        📄 View My CV
     </a>
-
 </div>
 
 </div>
