--- a/index.html
+++ b/index.html
@@ -128,9 +128,14 @@
     <!-- CV -->
     <a href="assets/cv/Avishek_Bista_CV.pdf"
        target="_blank"
-       class="contact-btn cv"
-    >
-       📄 View My CV
+       class="contact-btn cv">
+       👀 View CV
+    </a>
+    
+    <a href="assets/cv/Avishek_Bista_CV.pdf"
+       download
+       class="contact-btn cv download">
+       ⬇️ Download CV
     </a>
 </div>
 
