--- a/index.html
+++ b/index.html
@@ -129,13 +129,7 @@
     <a href="assets/cv/Avishek_Bista_CV.pdf"
        target="_blank"
        class="contact-btn cv">
-       👀 View CV
-    </a>
-    
-    <a href="assets/cv/Avishek_Bista_CV.pdf"
-       download
-       class="contact-btn cv download">
-       ⬇️ Download CV
+       📄 View My CV
     </a>
 </div>
 
